tkb/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');

* {
	font-family: 'Noto Sans', sans-serif;
	text-decoration: none;
	text-align: center;
	box-sizing: border-box;
	font-weight: unset;
}

body {
	overflow-x: hidden;
}

html {
	scroll-behavior: smooth;
}

html::-webkit-scrollbar {
	width: 0.8rem;
}

html::-webkit-scrollbar-thumb {
	height: 10rem;
	background-color: #ccc;
	border: 1px solid white;
	border-radius: 6px;
}

html::-webkit-scrollbar-track {
	background-color: white;
}

body {
	background-color: #cde2f5;
}

a {
	color: #757575;
	transition: 0.2s;
}

a:hover {
	color: #7278D1;
	transition: 0.2s;
}

table {
	margin: auto;
	color: #808080;
	border-radius: 10px;
	overflow: inherit;
	box-shadow: 0 1px 2px 1px rgb(0 0 0 / 0.5%), 0 2px 3px 2px rgb(0 0 0 / 1%), 0 4px 15px 4px rgb(0 0 0 / 3%);
}

td {
	width: 160px;
	height: 70px;
	font-size: 16px;
	overflow: hidden;
	border-style: none;
	background-color: white;
}

.first {
	background-color: hsl(217, 73%, 62%);
	color: white;
	height: 50px;
	font-size: 18px;
}
.current {
	position: relative;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	border-top-right-radius: 10px;
	border-top-left-radius: 10px;
	transform: scale(1.05);
	box-shadow: 0 0.3px 1px 0.3px rgb(0 0 0 / 10%), 0 3px 6px 3px rgb(0 0 0 / 2%), 0 5px 50px 5px rgb(0 0 0 / 2%);
	animation: run-tkb 5s ease infinite;
}
#toast {
	position: fixed;
	top: 32px;
	right: 32px;
	z-index: 999999;
}



@keyframes slideInLeft {
	from {
		opacity: 0;
		transform: translateX(calc(100% + 32px));
	}

	to {
		opacity: 1;
		transform: translateX(0);
	}
}

@keyframes fadeOut {
	to {
		opacity: 0;
	}
}

.toast--success .toast__icon {
	color: #808080;
}


.toast+.toast {
	margin-top: 24px;
}

.toast__icon {
	font-size: 18px;
}

.toast__icon,
.toast__close {
	padding: 0 16px;
}

.toast__body {
	flex-grow: 1;
}

.toast {
    display: flex;
    align-items: center;
    background-color: #fff;
    border-radius: 2px;
    padding: 15px 10px 10px;
    border-left: 4px solid hsl(217, 73%, 62%);
    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
    transition: all linear 0.3s;
}
.toast__title {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 16px;
    font-weight: 600;
    color: #000;
}
.fa-check-circle {
	color: hsl(217, 73%, 62%);
}


@keyframes run-tkb {
	0% {
		border: #00ccff90 1px solid;
	}
	50% {
		border: #d400d496 1px solid;
	}
	100% {
		border: #00ccff91 1px solid;
	}
}
table th:first-child {
	border-top-left-radius: 10px;
}

table tr:last-child td:first-child {
	border-bottom-left-radius: 10px;
}

table th:last-child {
	border-top-right-radius: 10px;
}

table tr:last-child td:last-child {
	border-bottom-right-radius: 10px;
}

table tr:first-child td:last-child {
	border-top-right-radius: 10px;
}

table tr:first-child td:first-child {
	border-top-left-radius: 10px;
}

.text {
	color: #808080;
	font-family: 'Quicksand', sans-serif;
}

td a[class="copy-click"]:hover::before, .toast__icon {
	content: "\f0c5";
	color: #808080;
	font-family: "Font Awesome 6 Free";
	font-weight: 200;
	transition: 5s;
	margin-right: 5px;
}

td a[class="copy-click"]:active::before {
	content: "\f00c";
	font-family: "Font Awesome 6 Free";
	font-weight: 900;
	transition: 5s;
	color: #808080;
	margin-right: 5px;
}

@keyframes den-tiet {
	0% {
		opacity: 0.5;
	}

	100% {
		opacity: 1;
	}
}

/* den-tiet 1s infinite alternate */
@media only screen and (max-width: 700px) {
	td {
		width: 160px;
		height: 70px;
		font-size: 11px;
		overflow: hidden;
		border-style: none;
		background-color: white;
	}
	.id td {
		font-size: 12px !important;
	}

	.first {
		color: white;
		height: 50px;
		font-size: 13px;
	}

	#chieu {
		margin-bottom: 30px;
	}
	#toast {
		top: 10px;
		right: 10px;
	}
	.toast {
		padding: 10px 0;
	}
	.toast__title {
		font-size: 9px;
	}
	.fa-check-circle {
		font-size: 14px;
	}
	
	td a[class="copy-click"]:focus::before {
		content: "\f00c";
		font-family: "Font Awesome 6 Free";
		font-weight: 900;
		transition: 5s;
		color: #808080;
		margin-right: 5px;
	}
}

.copy-click {
	color: #808080;
	transition: 0.1s;
}

.copy-click:hover {
	color: #7278D1;
	transition: ease-in-out 0.1s;
}

@media only screen and (min-width: 900px) {
	.id {
		width: 600px;
	}
}

.id.first, .id.copy-click {
	font-size: 19px;
}

@media (prefers-color-scheme: dark) {
	td a[class="copy-click"]:active::before, td a[class="copy-click"]:hover:before {
		color: #eee;
	}

	.text {
		color: #eee;
		font-family: 'Quicksand', sans-serif;
	}

	#text2 {
		color: #eee;
	}

	body {
		background-color: #2B2B2B;
	}

	table {
		color: #eee;
	}

	a, .copy-click {
		color: #eee;
	}

	td {
		background-color: #423F3E;
	}

	.first {
		background-color: rgb(64, 104, 169);
		color: #eee;
	}

	html::-webkit-scrollbar-track {
		background-color: #423F3E;
	}

	html::-webkit-scrollbar-thumb {
		height: 10rem;
		background-color: #ccc;
		border: 2px solid #423F3E;
		border-radius: 6px;
	}
	.toast {
		background-color: #2B2B2B;
		border-left: 4px solid rgb(64, 104, 169);
	}
	.toast__title {
		color: #fff;
	}
	.fa-check-circle {
		color: rgb(64, 104, 169);
	}
}

